[gd_scene load_steps=5 format=3 uid="uid://bf14vd68l46tj"]

[ext_resource type="Script" path="res://interface/EncounterOverviewScreen.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cgalqocn148ji" path="res://icons/add.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://ifsr140r60d5" path="res://icons/delete.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://ykle5gipo0v8" path="res://icons/sort-alpha-down.svg" id="5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBC" type="VBoxContainer" parent="Background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HFlowContainer" type="HFlowContainer" parent="Background/VBC"]
layout_mode = 2

[node name="AddEncounterButton" type="Button" parent="Background/VBC/HFlowContainer"]
layout_mode = 2
tooltip_text = "Add a new encounter to the storyworld."
icon = ExtResource("3")

[node name="DeleteEncounterButton" type="Button" parent="Background/VBC/HFlowContainer"]
layout_mode = 2
tooltip_text = "Delete selected encounter from the storyworld."
icon = ExtResource("4")

[node name="EditEncounterButton" type="Button" parent="Background/VBC/HFlowContainer"]
layout_mode = 2
tooltip_text = "Edit selected encounter."
text = "Edit"

[node name="DuplicateEncounterButton" type="Button" parent="Background/VBC/HFlowContainer"]
layout_mode = 2
tooltip_text = "Duplicate selected encounter."
text = "Duplicate"

[node name="SearchBar" type="HBoxContainer" parent="Background/VBC/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/VBC/HFlowContainer/SearchBar"]
layout_mode = 2
tooltip_text = "Press enter after entering search term in order to filter events by search term."
mouse_filter = 1
text = "Search Encounters:"

[node name="LineEdit" type="LineEdit" parent="Background/VBC/HFlowContainer/SearchBar"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
tooltip_text = "Press enter after entering search term in order to filter encounters by search term."
placeholder_text = "Enter search term"

[node name="SortBar" type="HBoxContainer" parent="Background/VBC/HFlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/VBC/HFlowContainer/SortBar"]
layout_mode = 2
text = "Sort by:"

[node name="SortMenu" type="OptionButton" parent="Background/VBC/HFlowContainer/SortBar"]
layout_mode = 2
selected = 0
item_count = 10
popup/item_0/text = "Alphabetical"
popup/item_1/text = "Creation Time"
popup/item_1/id = 1
popup/item_2/text = "Modified Time"
popup/item_2/id = 2
popup/item_3/text = "Option Count"
popup/item_3/id = 3
popup/item_4/text = "Reaction Count"
popup/item_4/id = 4
popup/item_5/text = "Effect Count"
popup/item_5/id = 5
popup/item_6/text = "Characters"
popup/item_6/id = 6
popup/item_7/text = "Spools"
popup/item_7/id = 7
popup/item_8/text = "Desirability"
popup/item_8/id = 9
popup/item_9/text = "Word Count"
popup/item_9/id = 8

[node name="ToggleReverseButton" type="Button" parent="Background/VBC/HFlowContainer/SortBar"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("5")

[node name="EncounterList" type="Tree" parent="Background/VBC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
columns = 7
column_titles_visible = true
hide_root = true
select_mode = 2

[node name="ConfirmEncounterDeletion" type="ConfirmationDialog" parent="."]

[node name="EncountersToDelete" type="ItemList" parent="ConfirmEncounterDeletion"]
offset_left = 8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 164.0

[connection signal="pressed" from="Background/VBC/HFlowContainer/AddEncounterButton" to="." method="_on_AddEncounterButton_pressed"]
[connection signal="pressed" from="Background/VBC/HFlowContainer/DeleteEncounterButton" to="." method="_on_DeleteEncounterButton_pressed"]
[connection signal="pressed" from="Background/VBC/HFlowContainer/EditEncounterButton" to="." method="_on_EditEncounterButton_pressed"]
[connection signal="pressed" from="Background/VBC/HFlowContainer/DuplicateEncounterButton" to="." method="_on_DuplicateEncounterButton_pressed"]
[connection signal="text_submitted" from="Background/VBC/HFlowContainer/SearchBar/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="Background/VBC/HFlowContainer/SortBar/SortMenu" to="." method="_on_SortMenu_item_selected"]
[connection signal="toggled" from="Background/VBC/HFlowContainer/SortBar/ToggleReverseButton" to="." method="_on_ToggleReverseButton_toggled"]
[connection signal="column_title_clicked" from="Background/VBC/EncounterList" to="." method="_on_EncounterList_column_title_clicked"]
[connection signal="item_activated" from="Background/VBC/EncounterList" to="." method="_on_EncounterList_item_activated"]
[connection signal="confirmed" from="ConfirmEncounterDeletion" to="." method="_on_ConfirmEncounterDeletion_confirmed"]
